# banger

./: .gitignore  .gitmodules  BANGER.md  README.md
android/: BANGER.md  README.md
android/app/: build.gradle
android/app/src/debug/res/values/: donottranslate.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_banger_dislike_24.xml  ic_banger_like_24.xml
android/app/src/main/res/layout-h360dp/: fragment_playback_panel.xml
android/app/src/main/res/layout-h520dp/: fragment_playback_panel.xml
banger/: pyproject.toml
banger/scripts/: _paths.py  _ui.py  banger_api.py  capture_labels.py  cycle.py  db.py  download_batch.py  lyrics.py  make_batch.py  status.py
desktop/: meson.build
desktop/banger/: .gitignore  README.md  banger  config.example.toml
desktop/banger/scripts/: banger_api.py  db.py  download_batch.py  labels_sync.py  make_batch.py
desktop/data/: app.desktop.in  app.gschema.xml  app.metainfo.xml.in
desktop/src/: application.vala  gresource.xml  main.vala  meson.build
desktop/src/banger/: audition-page.vala  banger-service.vala  folder-list.vala  library-page.vala
desktop/src/ui/: leaflet.vala  narrow-bar.vala  play-bar.vala  play-panel.vala  store-panel.vala
docs/: architecture.md
src/: application.vala  meson.build
src/banger/: audition-page.vala  banger-service.vala  discover-page.vala  folder-list.vala  library-page.vala  lyrics-bar.vala
src/gtk/: store-panel.ui
src/ui/: music-widgets.vala  play-bar.vala  store-panel.vala  window.vala
src/utils/: music-library.vala
(+23 files in other folders)
